2019-02-XX Jan Kotanski <jankotan@gmail.com>
	* fix missing parameter support in nxscreate stdcomp
	* add nxsfileinfo test
	* tagged as v2.62.1

2019-02-19 Jan Kotanski <jankotan@gmail.com>
	* make nxscreate works without NXsConfigServer (if possible)
	* fix for nxscreate -o file
	* improve finding tango host from DB
	* tagged as v2.62.0

2019-01-15 Jan Kotanski <jankotan@gmail.com>
	* add flush for stderr stream
	* tagged as v2.61.5

2018-11-30 Jan Kotanski <jankotan@gmail.com>
	* make output of nxsfileinfo and nxsconfig info/geometry RST compatible
	* tagged as v2.61.4

2018-11-29 Jan Kotanski <jankotan@gmail.com>
	* fixes for collecting raw/h5 images
	* tagged as v2.61.3

2018-11-27 Jan Kotanski <jankotan@gmail.com>
	* fix eiger template
	* tagged as v2.61.2

2018-10-18 Jan Kotanski <jankotan@gmail.com>
	* fix for h5cpp with nxscollect
	* tagged as v2.61.1

2018-10-18 Jan Kotanski <jankotan@gmail.com>
	* split the package
	* tagged as v2.61.0

2018-10-17 Jan Kotanski <jankotan@gmail.com>
	* fix for h5cpp with nxscollect
	* tagged as v2.60.1

2018-10-17 Jan Kotanski <jankotan@gmail.com>
	* add support python3
	* tagged as v2.60.0

2018-10-09 Jan Kotanski <jankotan@gmail.com>
	* adopt is_bool for pninexus 1.2.10
	* fixes for SWMR with h5cpp
	* tagged as v2.59.2

2018-09-24 Jan Kotanski <jankotan@gmail.com>
	* change vfc_factor from FINAL to INIT
	* tagged as v2.59.1

2018-09-24 Jan Kotanski <jankotan@gmail.com>
	* add vfcfactor and keithley_gain in maiaflux
	* tagged as v2.59.0

2018-09-04 Jan Kotanski <jankotan@gmail.com>
	* improve beamtimeid template for (h5cpp writer)
	* tagged as v2.58.3

2018-05-18 Jan Kotanski <jankotan@gmail.com>
	* fix h5pywriter
	* tagged as v2.58.2

2018-04-19 Jan Kotanski <jankotan@gmail.com>
	* fix nxsconfig geometry paths
	* tagged as v2.58.1

2018-04-19 Jan Kotanski <jankotan@gmail.com>
	* shows attribute datasources  in nxsconfig info/geometry
	* tagged as v2.58.0

2018-04-11 Jan Kotanski <jankotan@gmail.com>
	* add datasignal