@@ -1,6 +1,7 @@
 2019-02-XX Jan Kotanski <jankotan@gmail.com>
 	* fix missing parameter support in nxscreate stdcomp
 	* add nxsfileinfo test
+	* set close degree STRONG as default
 	* tagged as v2.62.1
 
 2019-02-19 Jan Kotanski <jankotan@gmail.com>
